2008-6-01 Struan Robertson

  * ReactionManager.cpp/.h: Replaced an invocation of get_bi_molecularspecies with get_pseudoIsomer as part of the rationalization of SuperMolecules.

2008-07-06 Chris Morley

  Provide -g option which turns off cinfo and ctest streams and may solve the problems
  Alvyn was having with overflowing buffers.
  
_2008_07_09__15_39_30_ Chi-Hsiu Liang

  * Make zeroCount in matrix inversion routine an int array instead of an int vector. This removes address deallocation problem.

_2008_07_09__14_08_28_ Chi-Hsiu Liang

  * Removed all long double for cross platform consistency (Windows Visual C++ compiler maps long double to double)
  * Changed m_pSystemCollisionOperator to quad double. 
    I suspect some diagonalization problem caused by the accumulated error when the addition of values in AddReactionTerms 
    are done in double instead of higher precision. For every variable type such as double, long double, double double and 
    quad double, there is a limit called epsilon. Epsilon is the smallest non-trivial number you can add with 1.000.
    If many number smaller than this number is added/deducted in the collision operator and later divided, it may have big 
    difference. For example, 
    m = 3.14159265 + 0.000000001 = 3.141592651 but if truncated it will remain as 3.14159265
    And if many number smaller than 0.000000001 are added to m and later m is substracted by 3.14159265 and divided by something
    else, the result will be very wrong. 
    So when numbers are multiplied their magnitude is more important than their tailing numbers, but when numbers 
    are added/deducted and then perform multiplication and division, their tailing numbers have increased importance.
  * Move m_ActivationEnergy from AssociationReaction to Reaction, as not only AssociationReaction can use ILT.
  * Added a class DPoint to store numbers that can be modified later. See definition of Pointer.h and Pointer.cpp