@@ -1,5 +1,9 @@
 2008-6-01 Struan Robertson
 
+  * AssociationReaction.cpp/Molecule.h: Remove of unnecessary methods from SuperMolecule class.
+
+2008-6-01 Struan Robertson
+
   * ReactionManager.cpp/.h: Replaced an invocation of get_bi_molecularspecies with get_pseudoIsomer as part of the rationalization of SuperMolecules.
 
 2008-07-06 Chris Morley
